Add Test::FailWarnings to TestRequires

--- a/dist.ini
+++ b/dist.ini
@@ -7,8 +7,9 @@ copyright_holder = Chris Williams, Apocalypse
 
 [@BINGOS]
 
-[Prereqs / BuildRequires]
+[Prereqs / TestRequires]
 Test::More = 1.001002
+Test::FailWarnings = 0
 
 [Prereqs]
 IO::Socket::SSL = 2.066
